<resources>

    <string-array name="participants">
        <item>poop</item>
        <item>lol</item>
        <item>ok</item>
        <item>poop</item>
        <item>lol</item>
        <item>ok</item>
        <item>poop</item>
        <item>lol</item>
        <item>ok</item>
        <item>poop</item>
        <item>lol</item>
        <item>ok</item>
        <item>poop</item>
        <item>lol</item>
        <item>ok</item>
        <item>poop</item>
        <item>lol</item>
        <item>ok</item>
        <item>poop</item>
        <item>lol</item>
        <item>ok</item>
    </string-array>

    <string-array name="partici_nr">
        <item>3</item>
        <item>44</item>
        <item>55</item>
        <item>3</item>
        <item>44</item>
        <item>55</item>
        <item>3</item>
        <item>44</item>
        <item>55</item>
        <item>3</item>
        <item>44</item>
        <item>55</item>
        <item>3</item>
        <item>44</item>
        <item>55</item>
        <item>3</item>
        <item>44</item>
        <item>55</item>
        <item>3</item>
        <item>44</item>
        <item>55</item>
    </string-array>

    <string-array name="partici_time">
        <item>1.  9:44</item>
        <item>2.  11:22</item>
        <item>3.  11:33</item>
        <item>4.  11:44</item>
        <item>5.  12:22</item>
        <item>6.  13:33</item>
        <item>7.  14:22</item>
        <item>8.  15:22</item>
        <item>9.  21:33</item>
        <item>10.  22:22</item>
        <item>11.  23:22</item>
        <item>12.  25:33</item>
        <item>13.  33:22</item>
        <item>14.  31:22</item>
        <item>15.  35:33</item>
        <item>16.  41:22</item>
        <item>17.  42:22</item>
        <item>18.  43:33</item>
        <item>19.  44:22</item>
        <item>20.  45:22</item>
        <item>21.  45:33</item>
    </string-array>

    <string-array name="event_title">
        <item>Skovtur</item>
        <item>Bytur</item>
        <item>Skovtur i regn</item>
    </string-array>

    <string-array name="event_description">
        <item>Cykel i naturen</item>
        <item>Cykeltur efterfuldt af shopping?</item>
        <item>På farten ellers bliver du våd</item>
    </string-array>

    <string name="app_name">B6 SportEvent</string>
    <string name="home_icon">Home</string>
    <string name="bike_icon">Closest Event</string>
    <string name="joined_event">Joined Event</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="event_name">Event name xml</string>
    <string name="event_description">Event description xml</string>
    <string name="participants">Participants</string>
    <string name="start_event">Start</string>
    <string name="participant_name_test">Participant\'s name</string>
    <string name="participant_id_test">Participant\'s id</string>
    <string name="start_event_button">Start Event</string>
    <string name="result_information">Result\'s Information</string>
    <string name="time_counter">Time:</string>
    <string name="distance">Distance:</string>
    <string name="race_place_number">Race place number:</string>
    <string name="medal">Medal:</string>
    <string name="participants_number_result">Participant:</string>
    <string name="result_user_name">"Name: "</string>
    <string name="speed_start_event">"\t\t\t\t\tSpeed\n\n\t\t\t\t\t\t\t\t\t\tkm/h"</string>
    <string name="distance_start_event">"\t\t\t\tDistance\n\n\t\t\t\t\t\t\t\t\t\t\t\tkm"</string>
    <string name="timer_start_event">"\t\t\t\t\tTimer\n\n\t\t\t\t\t\t\t\t\t\tmin"</string>


    <string name="organizer_login">OrganizerLogin</string>
    <string name="user_login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="login_button">Login</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="enter_address">Enter Address</string>
    <string name="register_user">Register</string>
    <string name="name_title_edittext">Name:</string>
    <string name="e_mail_title_edittext">E-mail:</string>
    <string name="address_title_edittext">Address:</string>
    <string name="phone_number_title_edittext">Phone number:</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>

    <string name="contact_us">Contact US: <a href="https://www.geotrail.dk/kontakt/">https://www.geotrail.dk/kontakt/</a></string>
    <string name="sport_event_upper_bar_name">Sport Event</string>

</resources>