<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_01"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.ui.fragment.SignUpFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/name_title_edittext"
            android:textColor="@color/colorAccent"
            android:textSize="34dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="6dp"
            android:background="@color/white"
            android:hint="@string/enter_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/e_mail_title_edittext"
            android:textColor="@color/colorAccent"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_singup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="6dp"
            android:background="@color/white"
            android:hint="@string/enter_e_mail" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/address_title_edittext"
            android:textColor="@color/colorAccent"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_signup_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="6dp"
            android:background="@color/white"
            android:hint="@string/enter_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/phone_number_title_edittext"
            android:textColor="@color/colorAccent"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_signup_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="6dp"
            android:background="@color/white"
            android:hint="@string/enter_phone_number" />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:fontFamily="@font/lemon"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/register_user"
            android:textSize="28sp" />




    </LinearLayout>


</LinearLayout>