<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.CreateUser">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="4dp"
            android:textSize="34dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title_edittext" />

        <EditText
            android:layout_marginBottom="34dp"
            android:id="@+id/nameInput"
            android:hint="@string/enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"/>

        <TextView
            android:layout_marginBottom="4dp"
            android:textSize="34dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail_title_edittext" />

        <EditText
            android:layout_marginBottom="34dp"
            android:id="@+id/emailInput"
            android:hint="@string/enter_e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"/>

        <TextView
            android:layout_marginBottom="4dp"
            android:textSize="34dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_title_edittext" />

        <EditText
            android:layout_marginBottom="34dp"
            android:id="@+id/addressInput"
            android:hint="@string/enter_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="34dp"
            android:textStyle="bold"
            android:text="@string/phone_number_title_edittext"/>

        <EditText
            android:layout_marginBottom="34dp"
            android:id="@+id/phoneInput"
            android:hint="@string/enter_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="Register"
             />


    </LinearLayout>


</LinearLayout>