<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.HeadFragment">

    <ImageView
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:src="@drawable/image_01"
        />

    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        >


        <Button
            android:id="@+id/orgLoginButton"
            android:layout_marginBottom="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/organizer_login"
            android:background="@drawable/button"
            android:fontFamily="@font/lemon"/>


        <Button
            android:id="@+id/userLoginButton"
            android:layout_marginBottom="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:background="@drawable/button"
            android:fontFamily="@font/lemon"/>

        <Button
            android:id="@+id/buttonsignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/button"
            android:fontFamily="@font/lemon"/>
    </LinearLayout>


</LinearLayout>