<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context="com.example.sportevent.fragment.EventStartFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        >

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginStart="4dp"
                android:drawablePadding="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/speed_start_event"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                app:drawableTopCompat="@drawable/ic_baseline_speed" />

            <TextView
                android:layout_marginStart="4dp"
                android:drawablePadding="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/distance_start_event"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                app:drawableTopCompat="@drawable/ic_baseline_directions_bike" />


            <TextView
                android:layout_marginStart="8dp"
                android:drawablePadding="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/timer_start_event"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                app:drawableTopCompat="@drawable/ic_baseline_timer" />

        </LinearLayout>


        <Button
            android:id="@+id/start_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/start_event_button"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:layout_margin="4dp"
        android:id="@+id/map_container">

        <com.google.android.gms.maps.MapView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/start_map" />
    </RelativeLayout>



</LinearLayout>